--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
   <section class="navbar-menu">
-    <div style="background-color: red;" class="container-fluid">
+    <div class="container-fluid">
       <nav class="navbar navbar-expand-xl navbar-dark bg-dark fixed-top">
         <div class="container">
           <div class="social">
