footer menü href updated

--- a/index.html
+++ b/index.html
@@ -800,17 +800,17 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">KBB</a>
               </li>
-              <li class="nav-item" href="#">
-                <a class="nav-link">DR.KOCAK.TV</a>
+              <li class="nav-item">
+                <a class="nav-link"  href="#">DR.KOCAK.TV</a>
               </li>
-              <li class="nav-item" href="#">
-                <a class="nav-link">ONLİNE RANDEVU</a>
+              <li class="nav-item">
+                <a class="nav-link" href="#">ONLİNE RANDEVU</a>
               </li>
-              <li class="nav-item" href="#">
-                <a class="nav-link">BASIN & MEDYA</a>
+              <li class="nav-item">
+                <a class="nav-link" href="#">BASIN & MEDYA</a>
               </li>
-              <li class="nav-item" href="#">
-                <a class="nav-link">İLETİŞİM</a>
+              <li class="nav-item">
+                <a class="nav-link" href="#">İLETİŞİM</a>
               </li>
             </ul>
           </div>
