line class added w-100

--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 
             <!-- LİNE -->
             <div class="stripes d-flex justify-content-center mt-4">
-              <img src="./assets/img/line.png" alt="">
+              <img class="w-100" src="./assets/img/line.png" alt="">
             </div>
             <!-- BLOG AREA -->
             <div class="blog">
