--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <section class="main">
     <div class="container">
       <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-3 siderbar">
           <div class="left-wrapper">
             <div class="logo">
               <img style="width: 100%;" src="./assets/img/mainlogo.png" alt="">
@@ -320,15 +320,15 @@
               </div>
             </div>
             <!-- KOCAK TV -->
-            <div class="container kocak-tv">
+            <div id="kocakTV" class="container kocak-tv">
               <div class="row pt-5">
-                <div class="col-lg-3 col-sm-5">
+                <div class="col-lg-3 col-sm-12">
                   <div class="text">
                     <span>KOCAK TV</span>
                   </div>
                 </div>
 
-                <div class="col-lg-9 col-sm-7">
+                <div class="col-lg-9 col-sm-12">
                   <div class="list">
                     <ul class="nav nav-pills d-flex justify-content-end" id="pills-tab" role="tablist">
                       <li class="nav-item" role="presentation">
@@ -676,6 +676,13 @@
                       </div>
                     </div>
                   </div>
+                </div>
+
+                <!-- KOCAK TV BAŞA DÖN -->
+                <div class="back-to-top pt-5 d-flex justify-content-end">
+                  <span>
+                    <a href="#kocakTV"><i class="d-lg-none d-xl-none d-xxl-none fa-solid fa-circle-up fa-2x"></i></a>
+                  </span>
                 </div>
 
                 <!-- LİNE -->
