nav-menu updated

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   <a class="nav-link" href="#">DR.VOICE</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">ONLİNE RANDEVU</a>
+                  <a style="color: #46BBFD !important;" class="nav-link" href="#">ONLİNE RANDEVU</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">BASIN & MEDYA</a>
